third_party/WebKit/WebKit/mac/WebView/WebHTMLView.mm
@@ -4345,9 +4345,6 @@ static BOOL isInPasswordField(Frame* coreFrame)
     // the current event prevents that from causing a problem inside WebKit or AppKit code.
     [[event retain] autorelease];
 
-    if ([self _handleStyleKeyEquivalent:event])
-        return YES;
-    
     BOOL eventWasSentToWebCore = (_private->keyDownEvent == event);
     BOOL ret = NO;
 
@@ -4365,7 +4362,7 @@ static BOOL isInPasswordField(Frame* coreFrame)
             ret = frame->eventHandler()->keyEvent(event);
 
     if (!ret)
-        ret = [super performKeyEquivalent:event];
+        ret = [self _handleStyleKeyEquivalent:event] || [super performKeyEquivalent:event];
 
     [self release];
     
